# core-py

./: pyproject.toml
supabase_client/: __init__.py  types.py  utils.py
supabase_client/_async/: client.py
supabase_client/_sync/: client.py
